Fix for modal on mobile

--- a/src/sass/partials/_card.sass
+++ b/src/sass/partials/_card.sass
@@ -120,6 +120,7 @@
       +r(767)
         display: block
         max-width: 250px
+        margin: 0 auto
         text-align: center
 
 .calendar
