--- a/src/sass/partials/_modal.sass
+++ b/src/sass/partials/_modal.sass
@@ -3,10 +3,8 @@
   visibility: hidden
   transition: opacity 0.2s ease, visibility 0.2s ease
   &.is-active
-    +rhmin(400)
-      opacity: 1
-      visibility: visible
-    +r(767)
+    opacity: 1
+    visibility: visible
     .modal__overlay
       opacity: 1
       visibility: visible
